unpackaged/main/default/objects/DDC_PilotSetting__mdt/DDC_PilotSetting__mdt.object-meta.xml
<CustomObject>
    <label>DDC Pilot Setting</label>
    <pluralLabel>DDC Pilot Settings</pluralLabel>
</CustomObject>