unpackaged/main/default/objects/DDC_PilotSetting__mdt/fields/FeatureName__c.field-meta.xml
<CustomField>
    <fullName>FeatureName__c</fullName>
    <label>Feature Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>