unpackaged/main/default/objects/DDC_PilotSetting__mdt/fields/Stores__c.field-meta.xml
<CustomField>
    <fullName>Stores__c</fullName>
    <label>Stores</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>